Close/Dirty button on tabs is not centered nicely on Windows/Linux (fixes #7976)

--- a/src/vs/workbench/browser/parts/editor/media/notabstitle.css
+++ b/src/vs/workbench/browser/parts/editor/media/notabstitle.css
@@ -28,6 +28,7 @@
 /* Title Label */
 
 .monaco-workbench > .part.editor > .content > .one-editor-container > .title .title-label {
+	line-height: 35px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	position: relative;
